winSrv2022vm.tf






resource "azurerm_windows_virtual_machine" "example_vm" {
  name                = "vmwin2022-vm"
  resource_group_name = azurerm_resource_group.rg-srv-win.name
  location            = azurerm_resource_group.rg-srv-win.location
  size                = "Standard_E2s_v3"
  admin_username      = var.win_user
  admin_password      = var.win_password 
  network_interface_ids = [
    azurerm_network_interface.nic_vm.id,
  ]
  computer_name       = "vmwin2022"

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Standard_LRS"
  }

  source_image_reference {
    publisher = "MicrosoftWindowsServer"
    offer     = "WindowsServer"
    sku       = "2022-datacenter-azure-edition-hotpatch"   #"2022-datacenter-azure-edition-gen2"
    version   = "latest"
  }




 enable_automatic_updates = true
  patch_mode               = "AutomaticByPlatform"


}


output "vm_id" {
  value = azurerm_windows_virtual_machine.example_vm.id
}
